# cis194

./: LICENSE  README.md  cis194.cabal
src/: Main.hs
src/Hw/Utils/: Colors.hs  Console.hs  Testing.hs
src/Hw/Week1/: Cards.hs  CardsTest.hs  Hanoi.hs  HanoiTest.hs
src/Utils/: Colors.hs  Console.hs  Testing.hs
src/Week1/: Homework.hs  HomeworkTest.hs
