name:                cis194
version:             0.1.0.0
synopsis:            CIS 194: Introduction to Haskell (Spring 2013) course homework assignments.
homepage:            https://github.com/etrepat/cis194
license:             MIT
license-file:        LICENSE
author:              Estanislau Trepat
maintainer:          estanis@etrepat.com
copyright:           Copyright (c) 2017 Estanislau Trepat
category:            Tutorial
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cis194
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
